# townhallmonitor

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9b06002f6d7f_add_users_table.py  a3c8e1f24b01_add_circuit_breaker_columns.py  b5d9f2a83c10_add_performance_indexes.py  c7e2d4f19a63_add_session_management.py  d8f3a5b72e94_add_invite_codes_table.py  de3b41aa061d_initial_schema.py
backend/app/: auth.py  cache.py  config.py  database.py  email.py  invite.py  logging_config.py  main.py  password_check.py  rate_limit.py  request_context.py  scrape_runner.py
backend/app/data/: breached_passwords.txt
backend/app/models/: __init__.py  event.py  invite_code.py  legislator.py  scrape_log.py  user.py
backend/app/scraper/: __init__.py  ai_parser.py  asmdc.py  asmrc.py  base.py  event_data.py  filters.py  orchestrator.py  registry.py  senate.py  time_utils.py  wordpress.py
backend/app/scraper/certs/: entrust_dv_tls_issuing_rsa_ca2.pem
backend/scripts/: seed_legislators.py
backend/tests/: conftest.py  test_ai_parser.py  test_auth.py  test_events.py  test_filters.py  test_scrapers.py
backend/tests/fixtures/: asmdc_tribe_events.html  asmrc_event_listing.html  senate_drupal_views.html  wordpress_em.html  wordpress_generic.html  wordpress_tribe.html
frontend/: Dockerfile  middleware.ts  next.config.mjs
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/directory/: page.tsx
frontend/app/lib/: csrf.ts  sanitize-url.ts
frontend/app/login/: page.tsx
frontend/app/privacy/: page.tsx
frontend/app/register/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/status/: page.tsx
frontend/components/: Header.tsx
(+1 files in other folders)
